{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 160,
  "lineage": "8e6f2ef2-4b7f-dfcd-1768-3f805f3fb241",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:subnet/subnet-0bd2f12dc5f5a7b28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0bd2f12dc5f5a7b28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439148944274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0664f93f559f43c93"
          }
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756a0dd737356f05",
            "domain": "vpc",
            "id": "eipalloc-0756a0dd737356f05",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-213-145-135.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.145.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:internet-gateway/igw-0c62773f0b5b438f6",
            "id": "igw-0c62773f0b5b438f6",
            "owner_id": "439148944274",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1"
            },
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0756a0dd737356f05",
            "association_id": "eipassoc-0221704bbe959c038",
            "connectivity_type": "public",
            "id": "nat-031b866e8b90f42aa",
            "network_interface_id": "eni-0606b50cc55bd333c",
            "private_ip": "10.16.8.172",
            "public_ip": "13.213.145.135",
            "subnet_id": "subnet-07f8768d856e112f1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_rt_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "internet",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b420e0d24369c9e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-031b866e8b90f42aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b420e0d24369c9e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "internet",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c62773f0b5b438f6",
            "id": "r-rtb-0b4851fd0cbb0491e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4851fd0cbb0491e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:route-table/rtb-0b420e0d24369c9e2",
            "id": "rtb-0b420e0d24369c9e2",
            "owner_id": "439148944274",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private1_rt"
            },
            "tags_all": {
              "Name": "private1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:route-table/rtb-0b4851fd0cbb0491e",
            "id": "rtb-0b4851fd0cbb0491e",
            "owner_id": "439148944274",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pubblic1_rt"
            },
            "tags_all": {
              "Name": "pubblic1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6ef208876b3501e",
            "route_table_id": "rtb-0b420e0d24369c9e2",
            "subnet_id": "subnet-021cd74e709a74ed3"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b92adca256a2ad1",
            "route_table_id": "rtb-0b4851fd0cbb0491e",
            "subnet_id": "subnet-07f8768d856e112f1"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c64545d6860eedd1",
            "route_table_id": "rtb-0b4851fd0cbb0491e",
            "subnet_id": "subnet-0018f8d93bdf35f09"
          },
          "dependencies": [
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:subnet/subnet-021cd74e709a74ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021cd74e709a74ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439148944274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:subnet/subnet-07f8768d856e112f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f8768d856e112f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439148944274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:subnet/subnet-0018f8d93bdf35f09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0018f8d93bdf35f09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "439148944274",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:vpc/vpc-031805d071d047e1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-01e90a916aa937425",
            "default_route_table_id": "rtb-09dd0cc2c5b0af31c",
            "default_security_group_id": "sg-013473176a2094d41",
            "dhcp_options_id": "dopt-04ddb5f5c5c2563dd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031805d071d047e1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dd0cc2c5b0af31c",
            "owner_id": "439148944274",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg[\"sg1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:security-group/sg-0fe66b0fb94cfe234",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe66b0fb94cfe234",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "sg1",
            "name_prefix": "",
            "owner_id": "439148944274",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031805d071d047e1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.this",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.private_rt_routes",
            "module.network.aws_route.public_rt_routes",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.private_subnet_asso",
            "module.network.aws_route_table_association.public_subnet_asso",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"ami_instance\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bb27c26eda96fe9",
            "association_id": "eipassoc-0b14853a8a3187bbe",
            "domain": "vpc",
            "id": "eipalloc-00bb27c26eda96fe9",
            "instance": "i-03a1ddbcd986d9a30",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d8e1b6ce0a052d74",
            "private_dns": "ip-10-16-10-159.ap-southeast-1.compute.internal",
            "private_ip": "10.16.10.159",
            "public_dns": "ec2-3-0-211-140.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.211.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_subnet.this",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.private_rt_routes",
            "module.network.aws_route.public_rt_routes",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.private_subnet_asso",
            "module.network.aws_route_table_association.public_subnet_asso",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this",
            "module.sg.aws_security_group.this",
            "module.vm.aws_instance.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm[\"ami_instance\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:439148944274:instance/i-03a1ddbcd986d9a30",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a1ddbcd986d9a30",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "devops",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8e1b6ce0a052d74",
            "private_dns": "ip-10-16-10-159.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.16.10.159",
            "public_dns": "ec2-13-215-201-235.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.201.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0473f0849db6b483e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f8768d856e112f1",
            "tags": {
              "Name": "instance-final"
            },
            "tags_all": {
              "Name": "instance-final"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe66b0fb94cfe234"
            ]
          },
          "dependencies": [
            "aws_default_subnet.this",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route.private_rt_routes",
            "module.network.aws_route.public_rt_routes",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.private_subnet_asso",
            "module.network.aws_route_table_association.public_subnet_asso",
            "module.network.aws_subnet.private_subnets",
            "module.network.aws_subnet.public_subnets",
            "module.network.aws_vpc.this",
            "module.sg.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}